bad/incr_var_array.example_compiler_output
ERROR
[1mbad/incr_var_array.lat:5:3: [1;31merror: [0;1m++ operator is valid only for integer values not `int[]`[m
	x++;
	 [1;32m^[m
